[gd_scene load_steps=2 format=3 uid="uid://bol8xkr1mhmjg"]

[ext_resource type="Script" uid="uid://joc2yq55lhpm" path="res://Scenes/Main/settings/settings.gd" id="1_ux2c3"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1159.0
offset_top = -636.0
offset_right = -1159.0
offset_bottom = -636.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ux2c3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 72.0
offset_right = 802.0
offset_bottom = 572.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 376.0
offset_top = 192.0
offset_right = 776.0
offset_bottom = 461.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "НАСТРОЙКИ"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Громкость музыки"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 7.0
step = 0.05

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Разрешение экрана"

[node name="ResolutionOption" type="OptionButton" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Назад"
